refactoring:  - add virtual thread